# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpopt/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpdbcost/include)
# for the generated config.h file.
include_directories(${PROJECT_BINARY_DIR}/libgpos/include/)

add_library(naucrates
            include/naucrates/base/IDatum.h
            include/naucrates/base/IDatumBool.h
            include/naucrates/base/IDatumGeneric.h
            include/naucrates/base/IDatumInt2.h
            include/naucrates/base/IDatumInt4.h
            include/naucrates/base/IDatumInt8.h
            include/naucrates/base/IDatumOid.h
            include/naucrates/dxl/CDXLUtils.inl
            include/naucrates/dxl/errorcodes.h
            include/naucrates/dxl/gpdb_types.h
            include/naucrates/dxl/operators/CDXLOperatorFactory.inl
            include/naucrates/dxl/operators/dxlops.h
            include/naucrates/dxl/parser/CParseHandlerStacktrace.h
            include/naucrates/dxl/parser/parsehandlers.h
            include/naucrates/md/CGPDBTypeHelper.h
            include/naucrates/md/IMDAggregate.h
            include/naucrates/md/IMDCast.h
            include/naucrates/md/IMDCheckConstraint.h
            include/naucrates/md/IMDColStats.h
            include/naucrates/md/IMDColumn.h
            include/naucrates/md/IMDFunction.h
            include/naucrates/md/IMDId.h
            include/naucrates/md/IMDInterface.h
            include/naucrates/md/IMDPartConstraint.h
            include/naucrates/md/IMDRelationCtas.h
            include/naucrates/md/IMDRelationExternal.h
            include/naucrates/md/IMDRelStats.h
            include/naucrates/md/IMDScalarOp.h
            include/naucrates/md/IMDScCmp.h
            include/naucrates/md/IMDTrigger.h
            include/naucrates/md/IMDTypeBool.h
            include/naucrates/md/IMDTypeGeneric.h
            include/naucrates/md/IMDTypeInt2.h
            include/naucrates/md/IMDTypeInt4.h
            include/naucrates/md/IMDTypeInt8.h
            include/naucrates/md/IMDTypeOid.h
            include/naucrates/statistics/CStatsPredJoin.h
            include/naucrates/statistics/CStatsPred.h
            include/naucrates/statistics/IBucket.h
            include/naucrates/statistics/IStatistics.h

            include/naucrates/dxl/CDXLUtils.h
            src/CDXLUtils.cpp
            include/naucrates/dxl/CIdGenerator.h
            src/CIdGenerator.cpp
            include/naucrates/exception.h
            src/exception.cpp
            include/naucrates/init.h
            src/init.cpp
            include/naucrates/traceflags/traceflags.h
            src/traceflags.cpp
            include/naucrates/base/CDatumBoolGPDB.h
            src/base/CDatumBoolGPDB.cpp
            include/naucrates/base/CDatumGenericGPDB.h
            src/base/CDatumGenericGPDB.cpp
            include/naucrates/base/CDatumInt2GPDB.h
            src/base/CDatumInt2GPDB.cpp
            include/naucrates/base/CDatumInt4GPDB.h
            src/base/CDatumInt4GPDB.cpp
            include/naucrates/base/CDatumInt8GPDB.h
            src/base/CDatumInt8GPDB.cpp
            include/naucrates/base/CDatumOidGPDB.h
            src/base/CDatumOidGPDB.cpp
            include/naucrates/base/CQueryToDXLResult.h
            src/base/CQueryToDXLResult.cpp
            include/naucrates/base/IDatumStatisticsMappable.h
            src/base/IDatumStatisticsMappable.cpp
            include/naucrates/md/CDXLBucket.h
            src/md/CDXLBucket.cpp
            include/naucrates/md/CDXLColStats.h
            src/md/CDXLColStats.cpp
            include/naucrates/md/CDXLRelStats.h
            src/md/CDXLRelStats.cpp
            include/naucrates/md/CDXLStatsDerivedColumn.h
            src/md/CDXLStatsDerivedColumn.cpp
            include/naucrates/md/CDXLStatsDerivedRelation.h
            src/md/CDXLStatsDerivedRelation.cpp
            include/naucrates/md/CMDAggregateGPDB.h
            src/md/CMDAggregateGPDB.cpp
            include/naucrates/md/CMDCastGPDB.h
            src/md/CMDCastGPDB.cpp
            include/naucrates/md/CMDCheckConstraintGPDB.h
            src/md/CMDCheckConstraintGPDB.cpp
            include/naucrates/md/CMDColumn.h
            src/md/CMDColumn.cpp
            include/naucrates/md/CMDFunctionGPDB.h
            src/md/CMDFunctionGPDB.cpp
            include/naucrates/md/CMDIdCast.h
            src/md/CMDIdCast.cpp
            include/naucrates/md/CMDIdColStats.h
            src/md/CMDIdColStats.cpp
            include/naucrates/md/CMDIdGPDB.h
            src/md/CMDIdGPDB.cpp
            include/naucrates/md/CMDIdGPDBCtas.h
            src/md/CMDIdGPDBCtas.cpp
            include/naucrates/md/CMDIdRelStats.h
            src/md/CMDIdRelStats.cpp
            include/naucrates/md/CMDIdScCmp.h
            src/md/CMDIdScCmp.cpp
            include/naucrates/md/CMDIndexGPDB.h
            src/md/CMDIndexGPDB.cpp
            include/naucrates/md/CMDName.h
            src/md/CMDName.cpp
            include/naucrates/md/CMDPartConstraintGPDB.h
            src/md/CMDPartConstraintGPDB.cpp
            include/naucrates/md/CMDProviderGeneric.h
            src/md/CMDProviderGeneric.cpp
            include/naucrates/md/CMDProviderMemory.h
            src/md/CMDProviderMemory.cpp
            include/naucrates/md/CMDRelationCtasGPDB.h
            src/md/CMDRelationCtasGPDB.cpp
            include/naucrates/md/CMDRelationExternalGPDB.h
            src/md/CMDRelationExternalGPDB.cpp
            include/naucrates/md/CMDRelationGPDB.h
            src/md/CMDRelationGPDB.cpp
            include/naucrates/md/CMDRequest.h
            src/md/CMDRequest.cpp
            include/naucrates/md/CMDScalarOpGPDB.h
            src/md/CMDScalarOpGPDB.cpp
            include/naucrates/md/CMDScCmpGPDB.h
            src/md/CMDScCmpGPDB.cpp
            include/naucrates/md/CMDTriggerGPDB.h
            src/md/CMDTriggerGPDB.cpp
            include/naucrates/md/CMDTypeBoolGPDB.h
            src/md/CMDTypeBoolGPDB.cpp
            include/naucrates/md/CMDTypeGenericGPDB.h
            src/md/CMDTypeGenericGPDB.cpp
            include/naucrates/md/CMDTypeInt2GPDB.h
            src/md/CMDTypeInt2GPDB.cpp
            include/naucrates/md/CMDTypeInt4GPDB.h
            src/md/CMDTypeInt4GPDB.cpp
            include/naucrates/md/CMDTypeInt8GPDB.h
            src/md/CMDTypeInt8GPDB.cpp
            include/naucrates/md/CMDTypeOidGPDB.h
            src/md/CMDTypeOidGPDB.cpp
            include/naucrates/md/CSystemId.h
            src/md/CSystemId.cpp
            include/naucrates/md/IMDCacheObject.h
            src/md/IMDCacheObject.cpp
            include/naucrates/md/IMDIndex.h
            src/md/IMDIndex.cpp
            include/naucrates/md/IMDProvider.h
            src/md/IMDProvider.cpp
            include/naucrates/md/IMDRelation.h
            src/md/IMDRelation.cpp
            include/naucrates/md/IMDType.h
            src/md/IMDType.cpp
            include/naucrates/dxl/operators/CDXLColDescr.h
            src/operators/CDXLColDescr.cpp
            include/naucrates/dxl/operators/CDXLColRef.h
            src/operators/CDXLColRef.cpp
            include/naucrates/dxl/operators/CDXLCtasStorageOptions.h
            src/operators/CDXLCtasStorageOptions.cpp
            include/naucrates/dxl/operators/CDXLDatum.h
            src/operators/CDXLDatum.cpp
            include/naucrates/dxl/operators/CDXLDatumBool.h
            src/operators/CDXLDatumBool.cpp
            include/naucrates/dxl/operators/CDXLDatumGeneric.h
            src/operators/CDXLDatumGeneric.cpp
            include/naucrates/dxl/operators/CDXLDatumInt2.h
            src/operators/CDXLDatumInt2.cpp
            include/naucrates/dxl/operators/CDXLDatumInt4.h
            src/operators/CDXLDatumInt4.cpp
            include/naucrates/dxl/operators/CDXLDatumInt8.h
            src/operators/CDXLDatumInt8.cpp
            include/naucrates/dxl/operators/CDXLDatumOid.h
            src/operators/CDXLDatumOid.cpp
            include/naucrates/dxl/operators/CDXLDatumStatsDoubleMappable.h
            src/operators/CDXLDatumStatsDoubleMappable.cpp
            include/naucrates/dxl/operators/CDXLDatumStatsLintMappable.h
            src/operators/CDXLDatumStatsLintMappable.cpp
            include/naucrates/dxl/operators/CDXLDirectDispatchInfo.h
            src/operators/CDXLDirectDispatchInfo.cpp
            include/naucrates/dxl/operators/CDXLIndexDescr.h
            src/operators/CDXLIndexDescr.cpp
            include/naucrates/dxl/operators/CDXLLogical.h
            src/operators/CDXLLogical.cpp
            include/naucrates/dxl/operators/CDXLLogicalConstTable.h
            src/operators/CDXLLogicalConstTable.cpp
            include/naucrates/dxl/operators/CDXLLogicalCTAS.h
            src/operators/CDXLLogicalCTAS.cpp
            include/naucrates/dxl/operators/CDXLLogicalCTEAnchor.h
            src/operators/CDXLLogicalCTEAnchor.cpp
            include/naucrates/dxl/operators/CDXLLogicalCTEConsumer.h
            src/operators/CDXLLogicalCTEConsumer.cpp
            include/naucrates/dxl/operators/CDXLLogicalCTEProducer.h
            src/operators/CDXLLogicalCTEProducer.cpp
            include/naucrates/dxl/operators/CDXLLogicalDelete.h
            src/operators/CDXLLogicalDelete.cpp
            include/naucrates/dxl/operators/CDXLLogicalExternalGet.h
            src/operators/CDXLLogicalExternalGet.cpp
            include/naucrates/dxl/operators/CDXLLogicalGet.h
            src/operators/CDXLLogicalGet.cpp
            include/naucrates/dxl/operators/CDXLLogicalGroupBy.h
            src/operators/CDXLLogicalGroupBy.cpp
            include/naucrates/dxl/operators/CDXLLogicalInsert.h
            src/operators/CDXLLogicalInsert.cpp
            include/naucrates/dxl/operators/CDXLLogicalJoin.h
            src/operators/CDXLLogicalJoin.cpp
            include/naucrates/dxl/operators/CDXLLogicalLimit.h
            src/operators/CDXLLogicalLimit.cpp
            include/naucrates/dxl/operators/CDXLLogicalProject.h
            src/operators/CDXLLogicalProject.cpp
            include/naucrates/dxl/operators/CDXLLogicalSelect.h
            src/operators/CDXLLogicalSelect.cpp
            include/naucrates/dxl/operators/CDXLLogicalSetOp.h
            src/operators/CDXLLogicalSetOp.cpp
            include/naucrates/dxl/operators/CDXLLogicalTVF.h
            src/operators/CDXLLogicalTVF.cpp
            include/naucrates/dxl/operators/CDXLLogicalUpdate.h
            src/operators/CDXLLogicalUpdate.cpp
            include/naucrates/dxl/operators/CDXLLogicalWindow.h
            src/operators/CDXLLogicalWindow.cpp
            include/naucrates/dxl/operators/CDXLNode.h
            src/operators/CDXLNode.cpp
            include/naucrates/dxl/operators/CDXLOperator.h
            src/operators/CDXLOperator.cpp
            include/naucrates/dxl/operators/CDXLOperatorCost.h
            src/operators/CDXLOperatorCost.cpp
            include/naucrates/dxl/operators/CDXLOperatorFactory.h
            src/operators/CDXLOperatorFactory.cpp
            include/naucrates/dxl/operators/CDXLPhysical.h
            src/operators/CDXLPhysical.cpp
            include/naucrates/dxl/operators/CDXLPhysicalAbstractBitmapScan.h
            src/operators/CDXLPhysicalAbstractBitmapScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalAgg.h
            src/operators/CDXLPhysicalAgg.cpp
            include/naucrates/dxl/operators/CDXLPhysicalAppend.h
            src/operators/CDXLPhysicalAppend.cpp
            include/naucrates/dxl/operators/CDXLPhysicalAssert.h
            src/operators/CDXLPhysicalAssert.cpp
            include/naucrates/dxl/operators/CDXLPhysicalBitmapTableScan.h
            src/operators/CDXLPhysicalBitmapTableScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalBroadcastMotion.h
            src/operators/CDXLPhysicalBroadcastMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalCTAS.h
            src/operators/CDXLPhysicalCTAS.cpp
            include/naucrates/dxl/operators/CDXLPhysicalCTEConsumer.h
            src/operators/CDXLPhysicalCTEConsumer.cpp
            include/naucrates/dxl/operators/CDXLPhysicalCTEProducer.h
            src/operators/CDXLPhysicalCTEProducer.cpp
            include/naucrates/dxl/operators/CDXLPhysicalDML.h
            src/operators/CDXLPhysicalDML.cpp
            include/naucrates/dxl/operators/CDXLPhysicalDynamicBitmapTableScan.h
            src/operators/CDXLPhysicalDynamicBitmapTableScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalDynamicIndexScan.h
            src/operators/CDXLPhysicalDynamicIndexScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalDynamicTableScan.h
            src/operators/CDXLPhysicalDynamicTableScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalExternalScan.h
            src/operators/CDXLPhysicalExternalScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalGatherMotion.h
            src/operators/CDXLPhysicalGatherMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalHashJoin.h
            src/operators/CDXLPhysicalHashJoin.cpp
            include/naucrates/dxl/operators/CDXLPhysicalIndexOnlyScan.h
            src/operators/CDXLPhysicalIndexOnlyScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalIndexScan.h
            src/operators/CDXLPhysicalIndexScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalJoin.h
            src/operators/CDXLPhysicalJoin.cpp
            include/naucrates/dxl/operators/CDXLPhysicalLimit.h
            src/operators/CDXLPhysicalLimit.cpp
            include/naucrates/dxl/operators/CDXLPhysicalMaterialize.h
            src/operators/CDXLPhysicalMaterialize.cpp
            include/naucrates/dxl/operators/CDXLPhysicalMergeJoin.h
            src/operators/CDXLPhysicalMergeJoin.cpp
            include/naucrates/dxl/operators/CDXLPhysicalMotion.h
            src/operators/CDXLPhysicalMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalNLJoin.h
            src/operators/CDXLPhysicalNLJoin.cpp
            include/naucrates/dxl/operators/CDXLPhysicalPartitionSelector.h
            src/operators/CDXLPhysicalPartitionSelector.cpp
            include/naucrates/dxl/operators/CDXLPhysicalProperties.h
            src/operators/CDXLPhysicalProperties.cpp
            include/naucrates/dxl/operators/CDXLPhysicalRandomMotion.h
            src/operators/CDXLPhysicalRandomMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalRedistributeMotion.h
            src/operators/CDXLPhysicalRedistributeMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalResult.h
            src/operators/CDXLPhysicalResult.cpp
            include/naucrates/dxl/operators/CDXLPhysicalRoutedDistributeMotion.h
            src/operators/CDXLPhysicalRoutedDistributeMotion.cpp
            include/naucrates/dxl/operators/CDXLPhysicalRowTrigger.h
            src/operators/CDXLPhysicalRowTrigger.cpp
            include/naucrates/dxl/operators/CDXLPhysicalSequence.h
            src/operators/CDXLPhysicalSequence.cpp
            include/naucrates/dxl/operators/CDXLPhysicalSort.h
            src/operators/CDXLPhysicalSort.cpp
            include/naucrates/dxl/operators/CDXLPhysicalSplit.h
            src/operators/CDXLPhysicalSplit.cpp
            include/naucrates/dxl/operators/CDXLPhysicalSubqueryScan.h
            src/operators/CDXLPhysicalSubqueryScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalTableScan.h
            src/operators/CDXLPhysicalTableScan.cpp
            include/naucrates/dxl/operators/CDXLPhysicalTVF.h
            src/operators/CDXLPhysicalTVF.cpp
            include/naucrates/dxl/operators/CDXLPhysicalWindow.h
            src/operators/CDXLPhysicalWindow.cpp
            include/naucrates/dxl/operators/CDXLProperties.h
            src/operators/CDXLProperties.cpp
            include/naucrates/dxl/operators/CDXLScalar.h
            src/operators/CDXLScalar.cpp
            include/naucrates/dxl/operators/CDXLScalarAggref.h
            src/operators/CDXLScalarAggref.cpp
            include/naucrates/dxl/operators/CDXLScalarArray.h
            src/operators/CDXLScalarArray.cpp
            include/naucrates/dxl/operators/CDXLScalarArrayComp.h
            src/operators/CDXLScalarArrayComp.cpp
            include/naucrates/dxl/operators/CDXLScalarArrayRef.h
            src/operators/CDXLScalarArrayRef.cpp
            include/naucrates/dxl/operators/CDXLScalarArrayRefIndexList.h
            src/operators/CDXLScalarArrayRefIndexList.cpp
            include/naucrates/dxl/operators/CDXLScalarAssertConstraint.h
            src/operators/CDXLScalarAssertConstraint.cpp
            include/naucrates/dxl/operators/CDXLScalarAssertConstraintList.h
            src/operators/CDXLScalarAssertConstraintList.cpp
            include/naucrates/dxl/operators/CDXLScalarBitmapBoolOp.h
            src/operators/CDXLScalarBitmapBoolOp.cpp
            include/naucrates/dxl/operators/CDXLScalarBitmapIndexProbe.h
            src/operators/CDXLScalarBitmapIndexProbe.cpp
            include/naucrates/dxl/operators/CDXLScalarBooleanTest.h
            src/operators/CDXLScalarBooleanTest.cpp
            include/naucrates/dxl/operators/CDXLScalarBoolExpr.h
            src/operators/CDXLScalarBoolExpr.cpp
            include/naucrates/dxl/operators/CDXLScalarCaseTest.h
            src/operators/CDXLScalarCaseTest.cpp
            include/naucrates/dxl/operators/CDXLScalarCast.h
            src/operators/CDXLScalarCast.cpp
            include/naucrates/dxl/operators/CDXLScalarCoalesce.h
            src/operators/CDXLScalarCoalesce.cpp
            include/naucrates/dxl/operators/CDXLScalarCoerceBase.h
            src/operators/CDXLScalarCoerceBase.cpp
            include/naucrates/dxl/operators/CDXLScalarCoerceToDomain.h
            src/operators/CDXLScalarCoerceToDomain.cpp
            include/naucrates/dxl/operators/CDXLScalarCoerceViaIO.h
            src/operators/CDXLScalarCoerceViaIO.cpp
            include/naucrates/dxl/operators/CDXLScalarArrayCoerceExpr.h
            src/operators/CDXLScalarArrayCoerceExpr.cpp
            include/naucrates/dxl/operators/CDXLScalarComp.h
            src/operators/CDXLScalarComp.cpp
            include/naucrates/dxl/operators/CDXLScalarConstValue.h
            src/operators/CDXLScalarConstValue.cpp
            include/naucrates/dxl/operators/CDXLScalarDistinctComp.h
            src/operators/CDXLScalarDistinctComp.cpp
            include/naucrates/dxl/operators/CDXLScalarDMLAction.h
            src/operators/CDXLScalarDMLAction.cpp
            include/naucrates/dxl/operators/CDXLScalarFilter.h
            src/operators/CDXLScalarFilter.cpp
            include/naucrates/dxl/operators/CDXLScalarFuncExpr.h
            src/operators/CDXLScalarFuncExpr.cpp
            include/naucrates/dxl/operators/CDXLScalarHashCondList.h
            src/operators/CDXLScalarHashCondList.cpp
            include/naucrates/dxl/operators/CDXLScalarHashExpr.h
            src/operators/CDXLScalarHashExpr.cpp
            include/naucrates/dxl/operators/CDXLScalarHashExprList.h
            src/operators/CDXLScalarHashExprList.cpp
            include/naucrates/dxl/operators/CDXLScalarIdent.h
            src/operators/CDXLScalarIdent.cpp
            include/naucrates/dxl/operators/CDXLScalarIfStmt.h
            src/operators/CDXLScalarIfStmt.cpp
            include/naucrates/dxl/operators/CDXLScalarIndexCondList.h
            src/operators/CDXLScalarIndexCondList.cpp
            include/naucrates/dxl/operators/CDXLScalarJoinFilter.h
            src/operators/CDXLScalarJoinFilter.cpp
            include/naucrates/dxl/operators/CDXLScalarLimitCount.h
            src/operators/CDXLScalarLimitCount.cpp
            include/naucrates/dxl/operators/CDXLScalarLimitOffset.h
            src/operators/CDXLScalarLimitOffset.cpp
            include/naucrates/dxl/operators/CDXLScalarMergeCondList.h
            src/operators/CDXLScalarMergeCondList.cpp
            include/naucrates/dxl/operators/CDXLScalarMinMax.h
            src/operators/CDXLScalarMinMax.cpp
            include/naucrates/dxl/operators/CDXLScalarNullIf.h
            src/operators/CDXLScalarNullIf.cpp
            include/naucrates/dxl/operators/CDXLScalarNullTest.h
            src/operators/CDXLScalarNullTest.cpp
            include/naucrates/dxl/operators/CDXLScalarOneTimeFilter.h
            src/operators/CDXLScalarOneTimeFilter.cpp
            include/naucrates/dxl/operators/CDXLScalarOpExpr.h
            src/operators/CDXLScalarOpExpr.cpp
            include/naucrates/dxl/operators/CDXLScalarOpList.h
            src/operators/CDXLScalarOpList.cpp
            include/naucrates/dxl/operators/CDXLScalarPartBound.h
            src/operators/CDXLScalarPartBound.cpp
            include/naucrates/dxl/operators/CDXLScalarPartBoundInclusion.h
            src/operators/CDXLScalarPartBoundInclusion.cpp
            include/naucrates/dxl/operators/CDXLScalarPartBoundOpen.h
            src/operators/CDXLScalarPartBoundOpen.cpp
            include/naucrates/dxl/operators/CDXLScalarPartDefault.h
            src/operators/CDXLScalarPartDefault.cpp
            include/naucrates/dxl/operators/CDXLScalarPartListValues.h
            src/operators/CDXLScalarPartListValues.cpp
            include/naucrates/dxl/operators/CDXLScalarPartListNullTest.h
            src/operators/CDXLScalarPartListNullTest.cpp
            include/naucrates/dxl/operators/CDXLScalarPartOid.h
            src/operators/CDXLScalarPartOid.cpp
            include/naucrates/dxl/operators/CDXLScalarProjElem.h
            src/operators/CDXLScalarProjElem.cpp
            include/naucrates/dxl/operators/CDXLScalarProjList.h
            src/operators/CDXLScalarProjList.cpp
            include/naucrates/dxl/operators/CDXLScalarRecheckCondFilter.h
            src/operators/CDXLScalarRecheckCondFilter.cpp
            include/naucrates/dxl/operators/CDXLScalarSortCol.h
            src/operators/CDXLScalarSortCol.cpp
            include/naucrates/dxl/operators/CDXLScalarSortColList.h
            src/operators/CDXLScalarSortColList.cpp
            include/naucrates/dxl/operators/CDXLScalarSubPlan.h
            src/operators/CDXLScalarSubPlan.cpp
            include/naucrates/dxl/operators/CDXLScalarSubquery.h
            src/operators/CDXLScalarSubquery.cpp
            include/naucrates/dxl/operators/CDXLScalarSubqueryAll.h
            src/operators/CDXLScalarSubqueryAll.cpp
            include/naucrates/dxl/operators/CDXLScalarSubqueryAny.h
            src/operators/CDXLScalarSubqueryAny.cpp
            include/naucrates/dxl/operators/CDXLScalarSubqueryExists.h
            src/operators/CDXLScalarSubqueryExists.cpp
            include/naucrates/dxl/operators/CDXLScalarSubqueryNotExists.h
            src/operators/CDXLScalarSubqueryNotExists.cpp
            include/naucrates/dxl/operators/CDXLScalarSubqueryQuantified.h
            src/operators/CDXLScalarSubqueryQuantified.cpp
            include/naucrates/dxl/operators/CDXLScalarSwitch.h
            src/operators/CDXLScalarSwitch.cpp
            include/naucrates/dxl/operators/CDXLScalarSwitchCase.h
            src/operators/CDXLScalarSwitchCase.cpp
            include/naucrates/dxl/operators/CDXLScalarWindowFrameEdge.h
            src/operators/CDXLScalarWindowFrameEdge.cpp
            include/naucrates/dxl/operators/CDXLScalarWindowRef.h
            src/operators/CDXLScalarWindowRef.cpp
            include/naucrates/dxl/operators/CDXLSpoolInfo.h
            src/operators/CDXLSpoolInfo.cpp
            include/naucrates/dxl/operators/CDXLTableDescr.h
            src/operators/CDXLTableDescr.cpp
            include/naucrates/dxl/operators/CDXLWindowFrame.h
            src/operators/CDXLWindowFrame.cpp
            include/naucrates/dxl/operators/CDXLWindowKey.h
            src/operators/CDXLWindowKey.cpp
            include/naucrates/dxl/operators/CDXLWindowSpec.h
            src/operators/CDXLWindowSpec.cpp
            include/naucrates/dxl/parser/CParseHandlerAgg.h
            src/parser/CParseHandlerAgg.cpp
            include/naucrates/dxl/parser/CParseHandlerAppend.h
            src/parser/CParseHandlerAppend.cpp
            include/naucrates/dxl/parser/CParseHandlerArray.h
            src/parser/CParseHandlerArray.cpp
            include/naucrates/dxl/parser/CParseHandlerAssert.h
            src/parser/CParseHandlerAssert.cpp
            include/naucrates/dxl/parser/CParseHandlerBase.h
            src/parser/CParseHandlerBase.cpp
            include/naucrates/dxl/parser/CParseHandlerBroadcastMotion.h
            src/parser/CParseHandlerBroadcastMotion.cpp
            include/naucrates/dxl/parser/CParseHandlerColDescr.h
            src/parser/CParseHandlerColDescr.cpp
            include/naucrates/dxl/parser/CParseHandlerColStats.h
            src/parser/CParseHandlerColStats.cpp
            include/naucrates/dxl/parser/CParseHandlerColStatsBucket.h
            src/parser/CParseHandlerColStatsBucket.cpp
            include/naucrates/dxl/parser/CParseHandlerCondList.h
            src/parser/CParseHandlerCondList.cpp
            include/naucrates/dxl/parser/CParseHandlerCost.h
            src/parser/CParseHandlerCost.cpp
            include/naucrates/dxl/parser/CParseHandlerCostModel.h
            src/parser/CParseHandlerCostModel.cpp
            include/naucrates/dxl/parser/CParseHandlerCostParam.h
            src/parser/CParseHandlerCostParam.cpp
            include/naucrates/dxl/parser/CParseHandlerCostParams.h
            src/parser/CParseHandlerCostParams.cpp
            include/naucrates/dxl/parser/CParseHandlerCtasStorageOptions.h
            src/parser/CParseHandlerCtasStorageOptions.cpp
            include/naucrates/dxl/parser/CParseHandlerCTEConfig.h
            src/parser/CParseHandlerCTEConfig.cpp
            include/naucrates/dxl/parser/CParseHandlerCTEList.h
            src/parser/CParseHandlerCTEList.cpp
            include/naucrates/dxl/parser/CParseHandlerDefaultValueExpr.h
            src/parser/CParseHandlerDefaultValueExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerDirectDispatchInfo.h
            src/parser/CParseHandlerDirectDispatchInfo.cpp
            include/naucrates/dxl/parser/CParseHandlerDistinctComp.h
            src/parser/CParseHandlerDistinctComp.cpp
            include/naucrates/dxl/parser/CParseHandlerDummy.h
            src/parser/CParseHandlerDummy.cpp
            include/naucrates/dxl/parser/CParseHandlerDXL.h
            src/parser/CParseHandlerDXL.cpp
            include/naucrates/dxl/parser/CParseHandlerDynamicIndexScan.h
            src/parser/CParseHandlerDynamicIndexScan.cpp
            include/naucrates/dxl/parser/CParseHandlerDynamicTableScan.h
            src/parser/CParseHandlerDynamicTableScan.cpp
            include/naucrates/dxl/parser/CParseHandlerEnumeratorConfig.h
            src/parser/CParseHandlerEnumeratorConfig.cpp
            include/naucrates/dxl/parser/CParseHandlerExternalScan.h
            src/parser/CParseHandlerExternalScan.cpp
            include/naucrates/dxl/parser/CParseHandlerFactory.h
            src/parser/CParseHandlerFactory.cpp
            include/naucrates/dxl/parser/CParseHandlerFilter.h
            src/parser/CParseHandlerFilter.cpp
            include/naucrates/dxl/parser/CParseHandlerGatherMotion.h
            src/parser/CParseHandlerGatherMotion.cpp
            include/naucrates/dxl/parser/CParseHandlerGroupingColList.h
            src/parser/CParseHandlerGroupingColList.cpp
            include/naucrates/dxl/parser/CParseHandlerHashExpr.h
            src/parser/CParseHandlerHashExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerHashExprList.h
            src/parser/CParseHandlerHashExprList.cpp
            include/naucrates/dxl/parser/CParseHandlerHashJoin.h
            src/parser/CParseHandlerHashJoin.cpp
            include/naucrates/dxl/parser/CParseHandlerHint.h
            src/parser/CParseHandlerHint.cpp
            include/naucrates/dxl/parser/CParseHandlerIndexCondList.h
            src/parser/CParseHandlerIndexCondList.cpp
            include/naucrates/dxl/parser/CParseHandlerIndexDescr.h
            src/parser/CParseHandlerIndexDescr.cpp
            include/naucrates/dxl/parser/CParseHandlerIndexOnlyScan.h
            src/parser/CParseHandlerIndexOnlyScan.cpp
            include/naucrates/dxl/parser/CParseHandlerIndexScan.h
            src/parser/CParseHandlerIndexScan.cpp
            include/naucrates/dxl/parser/CParseHandlerLimit.h
            src/parser/CParseHandlerLimit.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalConstTable.h
            src/parser/CParseHandlerLogicalConstTable.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalCTAS.h
            src/parser/CParseHandlerLogicalCTAS.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEAnchor.h
            src/parser/CParseHandlerLogicalCTEAnchor.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEConsumer.h
            src/parser/CParseHandlerLogicalCTEConsumer.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEProducer.h
            src/parser/CParseHandlerLogicalCTEProducer.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalDelete.h
            src/parser/CParseHandlerLogicalDelete.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalExternalGet.h
            src/parser/CParseHandlerLogicalExternalGet.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalGet.h
            src/parser/CParseHandlerLogicalGet.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalGroupBy.h
            src/parser/CParseHandlerLogicalGroupBy.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalInsert.h
            src/parser/CParseHandlerLogicalInsert.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalJoin.h
            src/parser/CParseHandlerLogicalJoin.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalLimit.h
            src/parser/CParseHandlerLogicalLimit.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalOp.h
            src/parser/CParseHandlerLogicalOp.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalProject.h
            src/parser/CParseHandlerLogicalProject.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalSelect.h
            src/parser/CParseHandlerLogicalSelect.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalSetOp.h
            src/parser/CParseHandlerLogicalSetOp.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalTVF.h
            src/parser/CParseHandlerLogicalTVF.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalUpdate.h
            src/parser/CParseHandlerLogicalUpdate.cpp
            include/naucrates/dxl/parser/CParseHandlerLogicalWindow.h
            src/parser/CParseHandlerLogicalWindow.cpp
            include/naucrates/dxl/parser/CParseHandlerManager.h
            src/parser/CParseHandlerManager.cpp
            include/naucrates/dxl/parser/CParseHandlerMaterialize.h
            src/parser/CParseHandlerMaterialize.cpp
            include/naucrates/dxl/parser/CParseHandlerMDCast.h
            src/parser/CParseHandlerMDCast.cpp
            include/naucrates/dxl/parser/CParseHandlerMDGPDBAgg.h
            src/parser/CParseHandlerMDGPDBAgg.cpp
            include/naucrates/dxl/parser/CParseHandlerMDGPDBCheckConstraint.h
            src/parser/CParseHandlerMDGPDBCheckConstraint.cpp
            include/naucrates/dxl/parser/CParseHandlerMDGPDBFunc.h
            src/parser/CParseHandlerMDGPDBFunc.cpp
            include/naucrates/dxl/parser/CParseHandlerMDGPDBScalarOp.h
            src/parser/CParseHandlerMDGPDBScalarOp.cpp
            include/naucrates/dxl/parser/CParseHandlerMDGPDBTrigger.h
            src/parser/CParseHandlerMDGPDBTrigger.cpp
            include/naucrates/dxl/parser/CParseHandlerMDIndex.h
            src/parser/CParseHandlerMDIndex.cpp
            include/naucrates/dxl/parser/CParseHandlerMDRelation.h
            src/parser/CParseHandlerMDRelation.cpp
            include/naucrates/dxl/parser/CParseHandlerMDRelationCtas.h
            src/parser/CParseHandlerMDRelationCtas.cpp
            include/naucrates/dxl/parser/CParseHandlerMDRelationExternal.h
            src/parser/CParseHandlerMDRelationExternal.cpp
            include/naucrates/dxl/parser/CParseHandlerMDRequest.h
            src/parser/CParseHandlerMDRequest.cpp
            include/naucrates/dxl/parser/CParseHandlerMDScCmp.h
            src/parser/CParseHandlerMDScCmp.cpp
            include/naucrates/dxl/parser/CParseHandlerMDType.h
            src/parser/CParseHandlerMDType.cpp
            include/naucrates/dxl/parser/CParseHandlerMergeJoin.h
            src/parser/CParseHandlerMergeJoin.cpp
            include/naucrates/dxl/parser/CParseHandlerMetadata.h
            src/parser/CParseHandlerMetadata.cpp
            include/naucrates/dxl/parser/CParseHandlerMetadataColumn.h
            src/parser/CParseHandlerMetadataColumn.cpp
            include/naucrates/dxl/parser/CParseHandlerMetadataColumns.h
            src/parser/CParseHandlerMetadataColumns.cpp
            include/naucrates/dxl/parser/CParseHandlerMetadataIdList.h
            src/parser/CParseHandlerMetadataIdList.cpp
            include/naucrates/dxl/parser/CParseHandlerMetadataObject.h
            src/parser/CParseHandlerMetadataObject.cpp
            include/naucrates/dxl/parser/CParseHandlerNLJoin.h
            src/parser/CParseHandlerNLJoin.cpp
            include/naucrates/dxl/parser/CParseHandlerOp.h
            src/parser/CParseHandlerOp.cpp
            include/naucrates/dxl/parser/CParseHandlerOptimizerConfig.h
            src/parser/CParseHandlerOptimizerConfig.cpp
            include/naucrates/dxl/parser/CParseHandlerPartitionSelector.h
            src/parser/CParseHandlerPartitionSelector.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalAbstractBitmapScan.h
            src/parser/CParseHandlerPhysicalAbstractBitmapScan.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalBitmapTableScan.h
            src/parser/CParseHandlerPhysicalBitmapTableScan.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTAS.h
            src/parser/CParseHandlerPhysicalCTAS.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTEConsumer.h
            src/parser/CParseHandlerPhysicalCTEConsumer.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTEProducer.h
            src/parser/CParseHandlerPhysicalCTEProducer.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalDML.h
            src/parser/CParseHandlerPhysicalDML.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalDynamicBitmapTableScan.h
            src/parser/CParseHandlerPhysicalDynamicBitmapTableScan.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalOp.h
            src/parser/CParseHandlerPhysicalOp.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalRowTrigger.h
            src/parser/CParseHandlerPhysicalRowTrigger.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalSplit.h
            src/parser/CParseHandlerPhysicalSplit.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalTVF.h
            src/parser/CParseHandlerPhysicalTVF.cpp
            include/naucrates/dxl/parser/CParseHandlerPhysicalWindow.h
            src/parser/CParseHandlerPhysicalWindow.cpp
            include/naucrates/dxl/parser/CParseHandlerPlan.h
            src/parser/CParseHandlerPlan.cpp
            include/naucrates/dxl/parser/CParseHandlerProjElem.h
            src/parser/CParseHandlerProjElem.cpp
            include/naucrates/dxl/parser/CParseHandlerProjList.h
            src/parser/CParseHandlerProjList.cpp
            include/naucrates/dxl/parser/CParseHandlerProperties.h
            src/parser/CParseHandlerProperties.cpp
            include/naucrates/dxl/parser/CParseHandlerQuery.h
            src/parser/CParseHandlerQuery.cpp
            include/naucrates/dxl/parser/CParseHandlerQueryOutput.h
            src/parser/CParseHandlerQueryOutput.cpp
            include/naucrates/dxl/parser/CParseHandlerRandomMotion.h
            src/parser/CParseHandlerRandomMotion.cpp
            include/naucrates/dxl/parser/CParseHandlerRedistributeMotion.h
            src/parser/CParseHandlerRedistributeMotion.cpp
            include/naucrates/dxl/parser/CParseHandlerRelStats.h
            src/parser/CParseHandlerRelStats.cpp
            include/naucrates/dxl/parser/CParseHandlerResult.h
            src/parser/CParseHandlerResult.cpp
            include/naucrates/dxl/parser/CParseHandlerRoutedMotion.h
            src/parser/CParseHandlerRoutedMotion.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarAggref.h
            src/parser/CParseHandlerScalarAggref.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarArrayComp.h
            src/parser/CParseHandlerScalarArrayComp.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarArrayRef.h
            src/parser/CParseHandlerScalarArrayRef.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarArrayRefIndexList.h
            src/parser/CParseHandlerScalarArrayRefIndexList.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarAssertConstraintList.h
            src/parser/CParseHandlerScalarAssertConstraintList.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarBitmapBoolOp.h
            src/parser/CParseHandlerScalarBitmapBoolOp.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarBitmapIndexProbe.h
            src/parser/CParseHandlerScalarBitmapIndexProbe.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarBooleanTest.h
            src/parser/CParseHandlerScalarBooleanTest.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarBoolExpr.h
            src/parser/CParseHandlerScalarBoolExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarCaseTest.h
            src/parser/CParseHandlerScalarCaseTest.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarCast.h
            src/parser/CParseHandlerScalarCast.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarCoalesce.h
            src/parser/CParseHandlerScalarCoalesce.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarCoerceToDomain.h
            src/parser/CParseHandlerScalarCoerceToDomain.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarCoerceViaIO.h
            src/parser/CParseHandlerScalarCoerceViaIO.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarArrayCoerceExpr.h
            src/parser/CParseHandlerScalarArrayCoerceExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarComp.h
            src/parser/CParseHandlerScalarComp.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarConstValue.h
            src/parser/CParseHandlerScalarConstValue.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarDMLAction.h
            src/parser/CParseHandlerScalarDMLAction.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarExpr.h
            src/parser/CParseHandlerScalarExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarFuncExpr.h
            src/parser/CParseHandlerScalarFuncExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarIdent.h
            src/parser/CParseHandlerScalarIdent.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarIfStmt.h
            src/parser/CParseHandlerScalarIfStmt.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarLimitCount.h
            src/parser/CParseHandlerScalarLimitCount.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarLimitOffset.h
            src/parser/CParseHandlerScalarLimitOffset.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarMinMax.h
            src/parser/CParseHandlerScalarMinMax.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarNullIf.h
            src/parser/CParseHandlerScalarNullIf.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarNullTest.h
            src/parser/CParseHandlerScalarNullTest.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarOp.h
            src/parser/CParseHandlerScalarOp.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarOpExpr.h
            src/parser/CParseHandlerScalarOpExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarOpList.h
            src/parser/CParseHandlerScalarOpList.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartBound.h
            src/parser/CParseHandlerScalarPartBound.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartBoundInclusion.h
            src/parser/CParseHandlerScalarPartBoundInclusion.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartBoundOpen.h
            src/parser/CParseHandlerScalarPartBoundOpen.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartDefault.h
            src/parser/CParseHandlerScalarPartDefault.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartListValues.h
            src/parser/CParseHandlerScalarPartListValues.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartListNullTest.h
            src/parser/CParseHandlerScalarPartListNullTest.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarPartOid.h
            src/parser/CParseHandlerScalarPartOid.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlan.h
            src/parser/CParseHandlerScalarSubPlan.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanParam.h
            src/parser/CParseHandlerScalarSubPlanParam.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanParamList.h
            src/parser/CParseHandlerScalarSubPlanParamList.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanTestExpr.h
            src/parser/CParseHandlerScalarSubPlanTestExpr.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubquery.h
            src/parser/CParseHandlerScalarSubquery.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubqueryExists.h
            src/parser/CParseHandlerScalarSubqueryExists.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSubqueryQuantified.h
            src/parser/CParseHandlerScalarSubqueryQuantified.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSwitch.h
            src/parser/CParseHandlerScalarSwitch.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarSwitchCase.h
            src/parser/CParseHandlerScalarSwitchCase.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarWindowFrameEdge.h
            src/parser/CParseHandlerScalarWindowFrameEdge.cpp
            include/naucrates/dxl/parser/CParseHandlerScalarWindowRef.h
            src/parser/CParseHandlerScalarWindowRef.cpp
            include/naucrates/dxl/parser/CParseHandlerSearchStage.h
            src/parser/CParseHandlerSearchStage.cpp
            include/naucrates/dxl/parser/CParseHandlerSearchStrategy.h
            src/parser/CParseHandlerSearchStrategy.cpp
            include/naucrates/dxl/parser/CParseHandlerSequence.h
            src/parser/CParseHandlerSequence.cpp
            include/naucrates/dxl/parser/CParseHandlerSort.h
            src/parser/CParseHandlerSort.cpp
            include/naucrates/dxl/parser/CParseHandlerSortCol.h
            src/parser/CParseHandlerSortCol.cpp
            include/naucrates/dxl/parser/CParseHandlerSortColList.h
            src/parser/CParseHandlerSortColList.cpp
            src/parser/CParseHandlerStackTrace.cpp
            include/naucrates/dxl/parser/CParseHandlerStatistics.h
            src/parser/CParseHandlerStatistics.cpp
            include/naucrates/dxl/parser/CParseHandlerStatisticsConfig.h
            src/parser/CParseHandlerStatisticsConfig.cpp
            include/naucrates/dxl/parser/CParseHandlerStatsBound.h
            src/parser/CParseHandlerStatsBound.cpp
            include/naucrates/dxl/parser/CParseHandlerStatsDerivedColumn.h
            src/parser/CParseHandlerStatsDerivedColumn.cpp
            include/naucrates/dxl/parser/CParseHandlerStatsDerivedRelation.h
            src/parser/CParseHandlerStatsDerivedRelation.cpp
            include/naucrates/dxl/parser/CParseHandlerSubqueryScan.h
            src/parser/CParseHandlerSubqueryScan.cpp
            include/naucrates/dxl/parser/CParseHandlerTableDescr.h
            src/parser/CParseHandlerTableDescr.cpp
            include/naucrates/dxl/parser/CParseHandlerTableScan.h
            src/parser/CParseHandlerTableScan.cpp
            include/naucrates/dxl/parser/CParseHandlerTraceFlags.h
            src/parser/CParseHandlerTraceFlags.cpp
            include/naucrates/dxl/parser/CParseHandlerUtils.h
            src/parser/CParseHandlerUtils.cpp
            include/naucrates/dxl/parser/CParseHandlerWindowFrame.h
            src/parser/CParseHandlerWindowFrame.cpp
            include/naucrates/dxl/parser/CParseHandlerWindowKey.h
            src/parser/CParseHandlerWindowKey.cpp
            include/naucrates/dxl/parser/CParseHandlerWindowKeyList.h
            src/parser/CParseHandlerWindowKeyList.cpp
            include/naucrates/dxl/parser/CParseHandlerWindowSpec.h
            src/parser/CParseHandlerWindowSpec.cpp
            include/naucrates/dxl/parser/CParseHandlerWindowSpecList.h
            src/parser/CParseHandlerWindowSpecList.cpp
            include/naucrates/dxl/parser/CParseHandlerXform.h
            src/parser/CParseHandlerXform.cpp
            include/naucrates/statistics/CBucket.h
            src/statistics/CBucket.cpp
            include/naucrates/statistics/CHistogram.h
            src/statistics/CHistogram.cpp
            include/naucrates/statistics/CHistogramUtils.h
            src/statistics/CHistogramUtils.cpp
            include/naucrates/statistics/CPoint.h
            src/statistics/CPoint.cpp
            include/naucrates/statistics/CScaleFactorUtils.h
            src/statistics/CScaleFactorUtils.cpp
            include/naucrates/statistics/CStatistics.h
            src/statistics/CStatistics.cpp
            include/naucrates/statistics/CStatisticsUtils.h
            src/statistics/CStatisticsUtils.cpp
            include/naucrates/statistics/CStatsPredConj.h
            src/statistics/CStatsPredConj.cpp
            include/naucrates/statistics/CStatsPredDisj.h
            src/statistics/CStatsPredDisj.cpp
            include/naucrates/statistics/CStatsPredLike.h
            src/statistics/CStatsPredLike.cpp
            include/naucrates/statistics/CStatsPredPoint.h
            src/statistics/CStatsPredPoint.cpp
            include/naucrates/statistics/CStatsPredUnsupported.h
            src/statistics/CStatsPredUnsupported.cpp
            include/naucrates/statistics/CStatsPredUtils.h
            src/statistics/CStatsPredUtils.cpp
            include/naucrates/statistics/CUpperBoundNDVs.h
            src/statistics/CUpperBoundNDVs.cpp
            include/naucrates/dxl/xml/CDXLMemoryManager.h
            src/xml/CDXLMemoryManager.cpp
            include/naucrates/dxl/xml/CDXLSections.h
            src/xml/CDXLSections.cpp
            include/naucrates/dxl/xml/CXMLSerializer.h
            src/xml/CXMLSerializer.cpp
            include/naucrates/dxl/xml/dxltokens.h
            src/xml/dxltokens.cpp
)

target_link_libraries(naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      gpos
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

# Prevent linker errors from undefined symbols on OSX.
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_target_properties(naucrates PROPERTIES
                        LINK_FLAGS "-undefined dynamic_lookup")
endif()

set_target_properties(naucrates PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS naucrates DESTINATION lib)
install(DIRECTORY include/naucrates DESTINATION include)
